# ringmpsc-rs

./: ALGORITHM.md  BENCHMARKS.md  CONVERSION_SUMMARY.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  SKILLS.md  STACK_RING_IMPL.md
.claude/: CLAUDE.md
.claude/agents/: docreview.agent.md
.claude/commands/: audit-ordering.md  audit-unsafe.md  bench.md  docreview.md  new-crate.md  spec-sync.md  test-crate.md  test-workspace.md  verify-concurrency.md  verify-invariants.md  verify-spec.md  verify.md
.github/: copilot-instructions.md
benches/: stack_vs_heap.rs  throughput.rs
crates/ringmpsc/: Cargo.toml  FAQ.md  PERFORMANCE.md  README.md  SKILLS.md  STACK_RING_IMPL.md  numa-aware-allocation.md  ring-optimization.md  spec.md
crates/ringmpsc-stream/: Cargo.toml  DESIGN.md  README.md  SKILLS.md  spec.md
crates/ringmpsc-stream/src/: channel.rs  config.rs  error.rs  invariants.rs  lib.rs  receiver.rs  sender.rs  shutdown.rs
crates/ringmpsc-stream/tests/: integration.rs
crates/ringmpsc/benches/: allocator.rs  throughput.rs
crates/ringmpsc/examples/: basic.rs  custom_allocator.rs  stack_ring.rs  zero_copy.rs
crates/ringmpsc/src/: allocator.rs  backoff.rs  channel.rs  config.rs  invariants.rs  lib.rs  metrics.rs  numa.rs  reservation.rs  ring.rs  stack_channel.rs  stack_ring.rs
crates/ringmpsc/tests/: allocator_tests.rs  integration_tests.rs  loom_tests.rs  miri_tests.rs  numa_tests.rs  property_tests.rs  quint_mbt.rs  stack_channel_tests.rs  stack_ring_tests.rs
crates/ringmpsc/tla/: README.md  RingSPSC.cfg  RingSPSC.qnt  RingSPSC.tla  itf-trace-viz.md
crates/ringwal/: Cargo.toml  README.md  SKILLS.md  spec.md
crates/ringwal-sim/: Cargo.toml
crates/ringwal-sim/src/: clock.rs  fault.rs  harness.rs  lib.rs  oracle.rs  sim_io.rs
crates/ringwal-sim/tests/: dst_tests.rs
crates/ringwal-store/: Cargo.toml  spec.md
crates/ringwal-store/src/: lib.rs  store.rs
crates/ringwal/benches/: wal_throughput.rs
crates/ringwal/docs/: DIRECT_IO.md  PIPELINED_FSYNC.md  PIPELINED_IMPROVEMENTS.md  architecture.md  benchmarks.md  dst.md  dst_arch.md
crates/ringwal/examples/: demo.rs
crates/ringwal/src/: config.rs  entry.rs  error.rs  invariants.rs  lib.rs  recovery.rs  segment.rs  store.rs  transaction.rs  wal.rs  writer.rs
crates/ringwal/src/io/: mod.rs  real.rs
crates/ringwal/tests/: integration_tests.rs
crates/span_collector/: Cargo.toml  DESIGN.md  README.md  SKILLS.md  spec.md
crates/span_collector/docs/: backpressure-notify-pattern.md
crates/span_collector/src/: async_bridge.rs  batch_processor.rs  collector.rs  exporter.rs  lib.rs  rate_limiter.rs  resilient_exporter.rs  span.rs
crates/span_collector/tests/: integration.rs
docs/: CUSTOM_ALLOCATORS.md  FORMAL_METHODS_AGENTIC_DEVELOPMENT.md  FORMAL_VERIFICATION_WORKFLOW.md  PERSISTENT_CONTEXT_GUIDE.md  QUINT_0_31_UPGRADE.md  QUINT_TRANSLATION.md  README.md  UB_FIX_MAKE_RESERVATION.md  model-based-testing-in-agentic-development.md  self-verified-pipeline.md  tokio-fairness.md
examples/: basic.rs  bench_final.rs  scaling_benchmark.rs  stack_ring.rs  zero_copy.rs
examples/span_collector/: Cargo.toml  DESIGN.md  README.md
examples/span_collector/docs/: backpressure-notify-pattern.md
examples/span_collector/examples/: main.rs  span_generator.rs
examples/span_collector/specs/: invariants.md
examples/span_collector/src/: async_bridge.rs  batch_processor.rs  collector.rs  exporter.rs  lib.rs  rate_limiter.rs  span.rs
specs/: ring-buffer-invariants.md
src/: channel.rs  config.rs  lib.rs  metrics.rs  reservation.rs  ring.rs  stack_channel.rs  stack_ring.rs
tests/: integration_tests.rs  stack_channel_tests.rs  stack_ring_tests.rs
