[package]
name = "ringmpsc-rs"
version = "0.1.0"
edition = "2021"
authors = ["Debasish Ghosh"]
description = "A high-performance lock-free Multi-Producer Single-Consumer (MPSC) channel implementation achieving 50+ billion messages per second"
license = "MIT"
repository = "https://github.com/debasishg/ringmpsc-rs"
readme = "README.md"
keywords = ["mpsc", "lock-free", "channel", "concurrent", "ring-buffer"]
categories = ["concurrency", "data-structures"]

[features]
# Enable loom for concurrency testing (cargo test --features loom)
loom = ["dep:loom"]
# Enable stack-allocated ring buffer variants (StackRing, StackChannel)
stack-ring = []

[dependencies]
crossbeam-utils = "0.8"
loom = { version = "0.7", optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "stack_vs_heap"
harness = false
required-features = ["stack-ring"]

# Note: The assume_init_ref() fix eliminates UB, so opt-level workaround is no longer needed
# Keeping default debug settings (opt-level = 0) for faster compile times
# [profile.dev]
# opt-level = 2
#
# [profile.test]
# opt-level = 2

