[workspace]
resolver = "2"
members = ["crates/ringmpsc", "crates/span_collector", "crates/ringmpsc-stream"]

# Default to the ringmpsc library crate
default-members = ["crates/ringmpsc"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/debasishg/ringmpsc-rs"

[workspace.dependencies]
# Core dependencies
crossbeam-utils = "0.8"
thiserror = "1.0"

# Optional/testing
loom = "0.7"
criterion = "0.5"

# Async runtime (span_collector)
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rand = "0.8"

