[package]
name = "ringmpsc-rs"
version = "0.1.0"
edition = "2021"
authors = ["Debasish Ghosh"]
description = "A high-performance lock-free Multi-Producer Single-Consumer (MPSC) channel implementation achieving 50+ billion messages per second"
license = "MIT"
repository = "https://github.com/debasishg/ringmpsc-rs"
readme = "README.md"
keywords = ["mpsc", "lock-free", "channel", "concurrent", "ring-buffer"]
categories = ["concurrency", "data-structures"]

[lints]
workspace = true

[features]
# Enable loom for concurrency testing (cargo test --features loom)
loom = ["dep:loom"]
# Enable stack-allocated ring buffer variants (StackRing, StackChannel)
stack-ring = []
# Enable Quint model-based testing (cargo test --features quint-mbt)
quint-mbt = ["dep:quint-connect", "dep:itf", "dep:serde", "dep:anyhow"]
# Enable nightly std::alloc::Allocator bridge (requires nightly Rust)
allocator-api = []
# Enable NUMA-aware ring buffer allocation (Linux: libc mbind, others: fallback)
numa = ["dep:libc"]

[dependencies]
crossbeam-utils.workspace = true
libc = { workspace = true, optional = true }
loom = { workspace = true, optional = true }
thiserror.workspace = true
quint-connect = { workspace = true, optional = true }
itf = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
bumpalo = "3"
criterion.workspace = true
proptest = "1.4"
# quint-connect is now a regular (optional) dependency, gated behind `quint-mbt` feature

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "stack_vs_heap"
harness = false
required-features = ["stack-ring"]

[[bench]]
name = "allocator"
harness = false

[[bin]]
name = "bench_final"
path = "bin/bench_final.rs"

[[bin]]
name = "scaling_benchmark"
path = "bin/scaling_benchmark.rs"
