[package]
name = "ringwal"
version = "0.1.0"
edition = "2024"
description = "Write-Ahead Log backed by lock-free SPSC ring buffers via ringmpsc-rs"
license = "MIT"
repository = "https://github.com/debasishg/ringmpsc-rs"

[dependencies]
ringmpsc-rs = { path = "../ringmpsc" }
ringmpsc-stream = { path = "../ringmpsc-stream" }
tokio = { workspace = true, features = ["sync", "time", "rt", "fs", "io-util"] }
serde.workspace = true
bincode = "1.3"
crc32fast = "1.4"
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
criterion = { workspace = true, features = ["async_tokio"] }
async-wal-db = { path = "../../../async-wal-db" }

[[bench]]
name = "wal_throughput"
harness = false

[[example]]
name = "demo"

[[bin]]
name = "ringwal-demo"
path = "bin/demo.rs"
