[package]
name = "span_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
ringmpsc-rs = { path = "../.." }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "demo"
path = "examples/main.rs"
